2009-01-12  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* openvasd/openvasd.c (main): Removed exit-upon-nonroot,
	because there is no reason why only root should start
	the server. It works well except for those
	operation where root privileges are needed.
	In cases where privileges are not sufficient, the
	log file will contain respective notes.

	* openvas-mkcert.in, openvas-adduser.in: Don't have
	it mandatory to be root.

2009-01-12  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Refactoring attack method.

	* openvasd/attack.c (launch_plugin): Changed int to gboolean parameter,
	doc.
	
	* openvasd/attack.c (init_host_kb): New method, extracted from
	attack_host, comments, documentation.
	
	* openvasd/attack.c (attack_host): Changed new_kb to be gboolean,
	extracted init_host_kb function.

2009-01-07  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvasd/attack.c (attack_host): Removed local unused variable
	kb_restored.

2009-01-07  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvasd/attack.c (attack_host, attack_start): Reformatted.
	
	* openvasd/attack.c (attack_network): Remoded local unused variable
	return_code, added comment.

2009-01-07  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Comment style transformed to JavaDoc style, duplicate code found and
	TODOs added.

	* openvasd/save_kb.c: Transformed comments to JavaDoc style, minor
	improvements, added note about code duplicates in save_tests.c.
	
	* openvasd/save_tests.c: Added note about code duplicate in save_kb.c.

2009-01-05  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvasd/attack.c (attack_network, launch_plugin) : Replaced tabs by
	spaces, repaired indentation & newlines, ready for refactoring.

2009-01-02  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* openvasd/openvasd.c (server_thread): Removed initialization
	of user-specific store (which happened after the fork) and
	lead to create of directory ".desc" in the